<resources>
    <string name="app_name">Project 2</string>
    <string name="title_activity_maps_view">Map</string>
    <string name="title_activity_diary_entry">Map</string>
    <string name="main_title">Travel Diary</string>
    <string name="app_main_name">Travel Diary</string>
    <string name="delete_current_trip">Fjern rejsen %s</string>
    <string name="liste">Vis som liste</string>
    <string name="show_as_map">Vis på kort</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="set_location">set location</string>
    <string name="start_date">start date</string>
    <string name="context_delete__entry">Slet</string>
    <string name="select_date">Select date</string>
</resources>
